--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,3 +11,7 @@ build-test:
   script:
     - chmod +x ./gradlew
     - ./gradlew clean build
+  rules:
+    - if: $CI_COMMIT_REF_PROTECTED == "true"
+      when: always
+    - when: never
